--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+/[Aa]rtifactDB/
+/[Aa]rtifacts/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
