--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,9 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Aa]rtifactDB/
 /[Aa]rtifacts/
-/[Ll]ibrary/
-/Library/ArtifactDB/
+[Ll]ibrary/
+[Aa]rtifactDB/
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
@@ -75,3 +74,7 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 =======
+AstroQuest/Library/ArtifactDB
+AstroQuest/Library/ArtifactDB
+AstroQuest/Library/ArtifactDB
+AstroQuest/Library/ArtifactDB
