--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
+AstroQuest/Library
 /[Aa]rtifacts/
 /[Ll]ibrary/
 /[Aa]rtifactDB/
